# PSToolchain

./: .gitignore  MANIFEST.in  README.md  generate_formula.py  pyproject.toml  setup.py
.github/workflows/: builder.yml  swift.yml
PSToolchain/: Package.swift
PSToolchain/Sources/PSToolchain/: PSToolchain.swift  PythonHandler.swift
PSToolchain/Sources/PSToolchain/Commands/Project/: KivyProject.swift  Project.swift  SwiftUIProject.swift
PSToolchain/Sources/PSToolchain/Commands/SwiftPackage/: SwiftPackage.swift
PSToolchain/Sources/PSToolchain/Commands/Swiftonize/: Build.swift  Export.swift  SourceFilter.swift  Swiftonize.swift  VenvDump.swift
_PSToolchain/Sources/PSToolchain/: PSToolchain.swift
_PSToolchain/Sources/PSToolchain/Commands/Swiftonize/: Build.swift
pstoolchain/: install_swiftonize.py  toolchain.py
src/pstoolchain/: __init__.py  install_swiftonize.py  toolchain.py
